--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         --bg: #f8fafc;
         --text: #0f172a;
         --accent: #2563eb;
-        --border: #e2e8f0;
+        --border: #cbd5e1;
         --card-bg: #ffffff;
-        --sub-text: #64748b;
-        --grid-color: rgba(37, 99, 235, 0.05);
+        --sub-text: #475569;
+        --grid-color: rgba(37, 99, 235, 0.06);
       }
       body {
         margin: 0;
@@ -87,18 +87,18 @@
   <script type="importmap">
 {
   "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "@react-three/fiber": "https://esm.sh/@react-three/fiber@^9.5.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "react-intersection-observer": "https://esm.sh/react-intersection-observer@^10.0.0",
+    "@react-three/fiber": "https://esm.sh/@react-three/fiber@^9.5.0",
     "@react-three/drei": "https://esm.sh/@react-three/drei@^10.7.7",
     "three": "https://esm.sh/three@^0.182.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
-    "react-intersection-observer": "https://esm.sh/react-intersection-observer@^10.0.0"
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
