feat: Update project images and diversify links
Updates project images to align with their technical descriptions and diversifies external links. Also refines internal styling and theme variables for a cleaner aesthetic. Includes TypeScript type augmentations to better support global API access.

--- a/index.html
+++ b/index.html
@@ -4,101 +4,92 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ECE (VLSI) Studio — Sudhanshu | Engineer & Entrepreneur</title>
+    <title>Sudhanshu Mishra — Engineering Studio v4.2</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            animation: {
+              'spin-slow': 'spin 5s linear infinite',
+            },
+            fontFamily: {
+              syncopate: ['Syncopate', 'sans-serif'],
+              inter: ['Inter', 'sans-serif'],
+            }
+          }
+        }
+      }
+    </script>
     <style>
       :root {
-        --bg: #050505;
-        --accent: #2563eb;
-        --text: #f8fafc;
+        --bg: #030303;
+        --foreground: #ffffff;
+        --muted: #94a3b8;
+        --accent: #3b82f6;
         --border: rgba(255, 255, 255, 0.08);
-        --card-bg: #08080a;
-        --sub-text: #94a3b8;
-        --grid-color: rgba(255, 255, 255, 0.03);
+        --card-bg: rgba(255, 255, 255, 0.02);
+        
+        /* Shadcn-like variables for the button component */
+        --primary: 0 0% 100%;
+        --primary-foreground: 0 0% 0%;
       }
-      [data-theme='light'] {
-        --bg: #f8fafc;
-        --text: #0f172a;
-        --accent: #2563eb;
-        --border: #cbd5e1;
-        --card-bg: #ffffff;
-        --sub-text: #475569;
-        --grid-color: rgba(37, 99, 235, 0.06);
-      }
+      
       body {
         margin: 0;
         background-color: var(--bg);
-        color: var(--text);
+        color: var(--foreground);
         font-family: 'Inter', sans-serif;
         overflow-x: hidden;
         -webkit-font-smoothing: antialiased;
-        transition: background-color 0.5s cubic-bezier(0.4, 0, 0.2, 1), color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
       }
-      h1, h2, h3, .font-syncopate {
-        font-family: 'Syncopate', sans-serif;
-        letter-spacing: 0.15em;
-        text-transform: uppercase;
+
+      .geist-font { font-family: 'Syncopate', sans-serif; }
+      .inter-font { font-family: 'Inter', sans-serif; }
+
+      .gradient-text {
+        background: linear-gradient(135deg, #ffffff 0%, #3b82f6 50%, #1d4ed8 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
       }
-      .studio-grid {
-        background-image: linear-gradient(var(--grid-color) 1px, transparent 1px),
-                          linear-gradient(90deg, var(--grid-color) 1px, transparent 1px);
-        background-size: 50px 50px;
-      }
+
       .noise {
         position: fixed;
         inset: 0;
-        z-index: 9999;
+        z-index: 1;
         pointer-events: none;
-        opacity: 0.015;
+        opacity: 0.02;
         background-image: url('https://grainy-gradients.vercel.app/noise.svg');
       }
-      .glass-panel {
-        background: rgba(var(--bg-rgb), 0.6);
-        backdrop-filter: blur(20px);
-        border: 1px solid var(--border);
-      }
-      /* Precision line animation */
-      .line-draw {
-        position: relative;
-        overflow: hidden;
-      }
-      .line-draw::after {
-        content: '';
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 1px;
-        background: var(--accent);
-        transform: scaleX(0);
-        transform-origin: left;
-        transition: transform 0.6s cubic-bezier(0.16, 1, 0.3, 1);
-      }
-      .line-draw:hover::after {
-        transform: scaleX(1);
-      }
+
       ::-webkit-scrollbar { width: 4px; }
       ::-webkit-scrollbar-track { background: var(--bg); }
       ::-webkit-scrollbar-thumb { background: #1e1e24; border-radius: 2px; }
-      [data-theme='light'] ::-webkit-scrollbar-thumb { background: #cbd5e1; }
-      ::-webkit-scrollbar-thumb:hover { background: var(--accent); }
+
+      @keyframes spin {
+        from { transform: rotate(0deg); }
+        to { transform: rotate(360deg); }
+      }
     </style>
   <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react-intersection-observer": "https://esm.sh/react-intersection-observer@^10.0.0",
-    "@react-three/fiber": "https://esm.sh/@react-three/fiber@^9.5.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "@react-three/drei": "https://esm.sh/@react-three/drei@^10.7.7",
-    "three": "https://esm.sh/three@^0.182.0",
     "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "gsap/": "https://esm.sh/gsap@^3.14.2/",
+    "gsap": "https://esm.sh/gsap@^3.14.2",
+    "@react-three/fiber": "https://esm.sh/@react-three/fiber@^9.5.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "three/": "https://esm.sh/three@^0.182.0/",
+    "three": "https://esm.sh/three@^0.182.0",
+    "react-intersection-observer": "https://esm.sh/react-intersection-observer@^10.0.0"
   }
 }
 </script>
